--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+html,body{
+    min-width:290px;
+      color: #4d4e53;
+      background-color: #ffffff;
+      font-family: 'Open Sans',Arial,sans-serif;
+      line-height: 1.5;
+}
+header{
+    color:black;
+    font-size: 30px;
+    margin:10px;
+    text-align:center;
+    font-size:1.8em;
+    font-weight:thin;
+}
 #navbar{
     position:fixed;
     min-width:290px;
@@ -6,34 +21,42 @@
     width:300px;
     height:100%;
     border-right:solid;
-    border-color:rgba(0,22,22,0.4)
+    border-color: rgb(97, 218, 251);
+    background-color: #20232a;
 }
 #navbar ul{
     height:88%;
     overflow-y:auto;
     overflow-x:hidden;
 }
-  #navbar li{
-    color: #4d4e53;
+#navbar li{
+    color: rgb(97, 218, 251);
     border:1px solid;
     border-bottom-width:0px;
-    padding:8px;
+    padding:13.5px;
     padding-left:45px;
     list-style: none;
     position:relative;
-   left:-50px;
+    left:-50px;
     width:100%;
     
 }
-  #navbar a{
+#navbar a{
     color: #4d4e53;
-      text-decoration:none;
-      cursor:pointer;
+    text-decoration:none;
+    cursor:pointer;
+}
+#navbar header {
+    color: rgb(97, 218, 251);
 } 
 #main-doc{
     position: absolute;
     margin-left:310px;
     padding:20px;
     margin-bottom:110px;
+}
+section li {
+    margin:15px 0px 0px 20px;
+    list-style: none;
 }
     
